fixed Deck+Tag, Stack